note-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: note-app
  template:
    metadata:
      labels:
        app: note-app
    spec:
      containers:
      - name: note-app
        image: hemanthreddy739/note-app
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "100m"
            memory: "100Mi"
