note-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: note-app-service
spec:
  selector:
    app: note-app
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
