note-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: note-app-deployment
  namespace: note-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: note-app
  template:
    metadata:
      labels:
        app: note-app
    spec:
      containers:
        - name: note-app
          image: hemanthreddy739/note-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: note-app-service
  namespace: note-app
spec:
  type: ClusterIP
  selector:
    app: note-app
  ports:
    - port: 80
      targetPort: 3000
